<resources>
    <string name="app_name">Sobat Dompet</string>
    <string name="title_example">Username :</string>
    <string name="continue_text">Lanjutkan</string>
    <string name="indonesia_number_suffix">+62</string>
    <string name="welcome_back">Selamat Datang</string>

    <!-- Onboarding -->
    <string name="onboarding_text_1">Transaksi aman dari semua rekening bank dan e-wallet dalam satu platform</string>
    <string name="onboarding_text_2">Lacak semua pemasukan dan pengeluaran dari semua rekening dalam satu aplikasi</string>
    <string name="onboarding_text_3">Atur semua akun rekening bank dan e-wallet Anda dalam satu aplikasi</string>
    <string name="onboarding_sub_title_1">Transaksi aman dan nyaman ke semua rekening bank dan e-wallet Anda dalam satu genggaman</string>
    <string name="onboarding_sub_title_2">Atur semua pengeluaran dan pemasukan dari semua akun rekening dan e-wallet Anda kini jadi lebih mudah</string>
    <string name="onboarding_sub_title_3">Nikmati kemudahan dalam mengatur seluruh akun rekening dan e-wallet dalam satu aplikasi</string>

    <!-- Getting Started -->
    <string name="getting_started">Mulai Sekarang</string>
    <string name="getting_started_title">Mulai kemudahan dalam bertransaksi sekarang juga</string>
    <string name="getting_started_sub_title">Nikmati kemudahan dalam mengatur seluruh akun rekening bank dan e-money Anda dan permudah transaksi dalam satu platform</string>

    <!-- Forgot -->
    <string name="forgot_password">Lupa Password</string>
    <string name="forgot_username">Lupa Nama Pengguna</string>
    <string name="forgot_phone">Lupa Nomor HP</string>
    <string name="forgot_recover_title">Perbaharui Akun</string>
    <string name="forgot_recover_button">Perbaharui</string>
    <string name="forgot_cancel_button">Batal</string>
    <string name="forgot_username_hint">Masukkan nama pengguna Anda</string>
    <string name="forgot_email_hint">Masukkan Email Anda</string>
    <string name="forgot_phone_hint">Masukkan nomor HP Anda</string>
    <string name="forgot_update_username">Perbaharui Nama Pengguna</string>
    <string name="forgot_update_password">Perbaharui Kata Sandi</string>
    <string name="forgot_update_phone">Perbaharui Nomor HP</string>
    <string name="forgot_update_username_success">Berhasil update username</string>
    <string name="forgot_update_password_success">Berhasil update password</string>
    <string name="forgot_update_phone_success">Berhasil update nomor HP</string>

    <!-- Phone -->
    <string name="phone_title">Nomor Handphone :</string>
    <string name="phone_hint">Cth. 81234567890</string>
    <string name="phone_error">Nomor handphone harus terdiri dari minimal 12 angka dan maksimal 13 angka</string>

    <!-- Password -->
    <string name="password_title">Kata Sandi :</string>
    <string name="password_confirm_title">Konfirmasi Kata Sandi :</string>
    <string name="password_hint">Masukkan kata sandi</string>
    <string name="password_confirm_hint">Masukkan konfirmasi kata sandi</string>
    <string name="password_error">Kata sandi harus terdiri dari minimal 5 karakter dan maksimal 15 karakter dengan kombinasi huruf dan angka</string>
    <string name="password_confirm_error">Kata sandi tidak cocok</string>

    <!-- Number -->
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>

    <!-- OTP -->
    <string name="otp_title">Verifikasi OTP</string>
    <string name="otp_desc">Kode OTP telah dikirimkan melalui WhatsApp ke nomor %1$s</string>
    <string name="otp_desc_email">Kode OTP telah dikirimkan melalui email ke %1$s</string>
    <string name="otp_info">Tidak menerima Kode OTP? Kirim Ulang OTP</string>
    <string name="otp_resend">Kirim Ulang OTP</string>
    <string name="otp_countdown">Kirim ulang kode OTP dalam %1$s</string>

    <!-- Register -->
    <string name="register_text">Daftar</string>
    <string name="register_title">Daftar</string>
    <string name="register_sub_title">Daftar pengguna baru dengan mengisi form berikut</string>
    <string name="register_full_name">Nama Lengkap :</string>
    <string name="register_user_name">Nama Pengguna :</string>
    <string name="register_email">Email :</string>
    <string name="register_date_of_birth">Tanggal Lahir :</string>
    <string name="register_full_name_hint">Cth. Fanny Elisabeth</string>
    <string name="register_user_name_hint">Cth. fanny123</string>
    <string name="register_email_hint">Cth. email@mail.com</string>
    <string name="register_date_of_birth_hint">Masukkan tanggal lahir Anda</string>
    <string name="register_email_invalid">Email tidak valid</string>

    <!-- Personal Infor -->
    <string name="personal_info_title">Tambahkan informasi pribadi Anda</string>
    <string name="personal_info_sub_title">Informasi ini dibutuhkan untuk melengkapi proses registrasi Anda</string>

    <!-- Response -->
    <string name="response_server_error">Internal Server Error</string>
    <string name="response_error_title">Permintaan gagal :(</string>
    <string name="response_error_desc">Permintaan kamu belum bisa diproses, coba lagi ya</string>
    <string name="response_success_title">Permintaan berhasil :)</string>
    <string name="response_success_desc">Permintaan kamu berhasil nih, yuk lanjut ke proses selanjutnya</string>
    <string name="response_button_back">Kembali</string>
    <string name="response_button_next">Lanjut</string>
    <string name="response_button_ok">Oke</string>
    <string name="response_otp_success">Autentikasi berhasil</string>
    <string name="response_otp_resend_success">Kode OTP udah dikirim ulang nih, coba cek WhatsApp kamu yaa</string>
    <string name="response_otp_register_success_desc">Registrasi dan autentikasi nya berhasil nih, yuk lanjut login</string>
    <string name="response_register_registered">Email atau nomor handphone sudah terdaftar nih, coba login atau gunakan email atau nomor handphone yang berbeda</string>
    <string name="response_register_available">Email atau nomor handphone tersedia, yuk lanjutin pendaftaran akun nya</string>
    <string name="response_register_phone_registered">Nomor handphone telah terdaftar</string>
    <string name="response_register_phone_available">Nomor handphone tersedia, silahkan lanjut ke proses selanjutnya</string>
    <string name="response_register_check_success">Pengecekan data sukses</string>
    <string name="response_register_email_registered">Email telah terdaftar</string>
    <string name="response_register_username_registered">Username telah terdaftar</string>
    <string name="response_register_success">Berhasil registrasi</string>
    <string name="response_register_failed">Gagal registrasi</string>
    <string name="response_login_already_login">Akun telah login di perangkat lain</string>
    <string name="response_login_not_registered">Akun tidak terdaftar</string>
    <string name="response_login_success">Login akun berhasil</string>
    <string name="response_login_incorrect_password">Password Salah</string>
    <string name="response_logout_success">Logout success</string>
    <string name="response_forgot_success">Akun kamu terdaftar, silahkan lanjutkan proses perubahan informasi akun</string>
    <string name="response_forgot_email_invalid">Email kamu tidak valid</string>

    <!-- Login -->
    <string name="login_text">Masuk</string>
    <string name="login_title">Selamat Datang kembali</string>
    <string name="login_desc">Masukkan nomor handphone yang sudah kamu daftarkan</string>
    <string name="login_username_title">Username</string>
    <string name="login_username_desc">Masuk dengan Username</string>
    <string name="login_phone_title">Nomor HP</string>
    <string name="login_phone_desc">Masuk dengan nomor HP</string>
    <string name="login_do_not_have_account">Belum punya akun? Daftar Sekarang</string>
    <string name="login_create_account">Daftar Sekarang</string>
    <string name="login_need_help">Butuh Bantuan?</string>
    <string name="login_contact_services">Pusat Bantuan</string>

    <!-- Home -->
    <string name="home_balance">Saldo</string>
    <string name="home_account_not_available">Anda belum menambahkan akun e-wallet Anda, tambahkan sekarang</string>
    <string name="home_add_account">Tambah Akun</string>

    <!-- Profil -->
    <string name="profile_toolbar_title">Profil</string>
    <string name="profile_personal_info_section">Informasi Pribadi</string>
    <string name="profile_security_section">Keamanan</string>
    <string name="profile_general_section">Umum</string>
    <string name="profile_your_profile">Profil Kamu</string>
    <string name="profile_history_transaction">Riwayat Transaksi</string>
    <string name="profile_biometric">Sidik Jari</string>
    <string name="profile_change_password">Ubah Password</string>
    <string name="profile_forgot_password">Lupa Password</string>
    <string name="profile_notification">Notifikasi</string>
    <string name="profile_language">Bahasa</string>
    <string name="profile_help_support">Bantuan dan Dukungan</string>

    <!-- Logout -->
    <string name="logout_title">Keluar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>